[gd_scene load_steps=8 format=3 uid="uid://bm7w3i5qr5sw0"]

[ext_resource type="Script" path="res://MINIGAMES/minijeu_3/Plasmid_Game.gd" id="1_ts5mb"]
[ext_resource type="PackedScene" uid="uid://dtxnuadi5aafl" path="res://MINIGAMES/minijeu_3/plate.tscn" id="2_fp7k7"]
[ext_resource type="Texture2D" uid="uid://tnqksvvlghf8" path="res://MINIGAMES/minijeu_3/figures/up.jpg" id="3_k3hlh"]
[ext_resource type="PackedScene" uid="uid://coasydelfxf46" path="res://clock.tscn" id="3_m10lt"]
[ext_resource type="Texture2D" uid="uid://dvjga2360ichd" path="res://MINIGAMES/minijeu_3/figures/down.jpg" id="4_owbfw"]
[ext_resource type="FontFile" uid="uid://2g7nibblpvpr" path="res://font/joystix monospace.otf" id="6_ikv7n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_54yqa"]

[node name="Plasmid_Game" type="Node"]
script = ExtResource("1_ts5mb")

[node name="plate" parent="." instance=ExtResource("2_fp7k7")]
position = Vector2(300, 324)

[node name="clock" parent="." instance=ExtResource("3_m10lt")]
visible = false

[node name="up" type="Button" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -251.0
offset_top = -73.0
offset_right = -143.0
offset_bottom = 35.0
grow_horizontal = 0
grow_vertical = 2
icon = ExtResource("3_k3hlh")

[node name="down" type="Button" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -251.0
offset_top = 50.0
offset_right = -143.0
offset_bottom = 158.0
grow_horizontal = 0
grow_vertical = 2
icon = ExtResource("4_owbfw")

[node name="TEXT" type="CanvasLayer" parent="."]
visible = false

[node name="temperature" type="Label" parent="TEXT"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 215.0
offset_top = -224.0
offset_right = 534.0
offset_bottom = -136.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.717647, 0, 0.67451, 1)
theme_override_constants/outline_size = 30
theme_override_font_sizes/font_size = 50
text = "Temperature"

[node name="number" type="Label" parent="TEXT"]
anchors_preset = -1
anchor_left = 0.847
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -103.744
offset_top = -140.0
offset_right = -116.0
offset_bottom = -68.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = 869.0
offset_top = 508.0
offset_right = 1037.0
offset_bottom = 542.0
theme_override_fonts/font = ExtResource("6_ikv7n")
theme_override_styles/background = SubResource("StyleBoxFlat_54yqa")
max_value = 1.0

[connection signal="pressed" from="up" to="." method="_on_up_pressed"]
[connection signal="pressed" from="down" to="." method="_on_down_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
